# Hangman

./: .gitignore  README.md  config.ini  graphics.py  main.py  pyproject.toml  settings.ini
data/: settings.ini  test.txt
src/: main.py
src/hangman/: graphics.py  main.py
