[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hangman"
version = "0.1.0"
dependencies = []
requires-python = ">=3.11"
authors = [
  {name = "Doworder"},
]
description = "My first pet project from Sergey Zhukov's roadmap"
readme = "README.md"
license = {text = "MIT"}
